# tee-worker-post-compute-rust

./: .dockerignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.post  Dockerfile.pre  README.md  release-please-config.json
.github/workflows/: ci.yml  docker-build-on-tag.yml  release.yml  sconify.yaml
compute/post/: Cargo.toml
compute/post/src/: api.rs  compute.rs
compute/post/src/api/: result_proxy_api_client.rs  result_sender_api_client.rs  worker_api.rs
compute/post/src/compute/: app_runner.rs  computed_file.rs  dropbox.rs  encryption.rs  result_utils.rs  signer.rs  utils.rs  web2_result.rs
compute/post/src/compute/utils/: env_utils.rs  result_utils.rs
compute/pre/: Cargo.toml
compute/pre/src/: compute.rs  lib.rs
compute/pre/src/api/: worker_api.rs
compute/pre/src/compute/: app_runner.rs  file_utils.rs  pre_compute_app.rs  pre_compute_args.rs  signer.rs
compute/pre/src/compute/utils/: file_utils.rs
post-compute/: Cargo.toml
post-compute/src/compute/: signer.rs
post-compute/src/compute/utils/: hash_utils.rs
pre-compute/: Cargo.toml
scone/: sconify.args
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  signer.rs  worker_api.rs
shared/src/signer/: post_signer.rs  pre_signer.rs
shared/src/utils/: env_utils.rs  hash_utils.rs
src/: api.rs  app_runner.rs  compute.rs  main.rs  post_compute.rs  utils.rs
src/api/: result_proxy_api_client.rs  worker_api.rs
src/compute/: app_runner.rs  computed_file.rs  dropbox.rs  encryption.rs  errors.rs  post.rs  signer.rs  web2_result.rs
src/compute/post/: signer.rs
src/compute/post/utils/: env_utils.rs
src/compute/utils/: env_utils.rs  hash_utils.rs  result_utils.rs
src/post_compute/: errors.rs  signer.rs
src/utils/: bytes_utils.rs  credentials_utils.rs  env_utils.rs  hash_utils.rs  signature_utils.rs
