[package]
name = "tee-worker-post-compute"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
alloy-signer = "0.15.9"
alloy-signer-local = "0.15.9"
cbc = { version = "0.1.2", features = ["alloc"] }
env_logger = "0.11.8"
base64 = "0.22.1"
log = "0.4.27"
rand = "0.8.5"
rsa = "0.9.8"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sha256 = "1.6.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
walkdir = "2.5.0"
zip = "4.0.0"
dropbox-sdk = { version = "0.19.1", default-features = false, features = ["default_client", "dbx_files"] }

[dev-dependencies]
logtest = "2.0.0"
mockall = "0.13.1"
once_cell = "1.21.3"
serial_test = "3.2.0"
temp-env = "0.3.6"
tempfile = "3.20.0"
tokio = "1.45.0"
wiremock = "0.6.3"
