[workspace]
resolver = "3"
members = [
    "compute/post",
    "compute/pre",
    "shared",
]

[workspace.dependencies]
# Core dependencies
aes = "0.8.4"
alloy-signer = "0.15.9"
alloy-signer-local = "0.15.9"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
env_logger = "0.11.8"
log = "0.4.27"
multiaddr = "0.18.2"
rand = "0.8.5"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rsa = "0.9.8"
serde = "1.0.219"
sha256 = "1.6.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
walkdir = "2.5.0"
zip = "4.0.0"

# Dev dependencies
logtest = "2.0.0"
mockall = "0.13.1"
once_cell = "1.21.3"
serde_json = "1.0.140"
serial_test = "3.2.0"
temp-env = "0.3.6"
tempfile = "3.20.0"
testcontainers = { version = "0.25.0", features = ["blocking"] }
testing_logger = "0.1.1"
tokio = "1.45.0"
wiremock = "0.6.3"

# Shared code
shared = { path = "shared" }
