[package]
name = "tee-worker-post-compute"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tee-worker-post-compute"
path = "src/bin/main.rs"

[dependencies]
shared = { workspace = true }

aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
env_logger = "0.11.8"
base64 = "0.22.1"
log = { workspace = true }
rand = "0.8.5"
rsa = "0.9.8"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
walkdir = "2.5.0"
zip = "4.0.0"

[dev-dependencies]
logtest = "2.0.0"
mockall = "0.13.1"
once_cell = "1.21.3"
serial_test = "3.2.0"
temp-env = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

