[package]
name = "tee-worker-post-compute"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tee-worker-post-compute"
path = "src/bin/main.rs"

[dependencies]
shared = { workspace = true }

aes = { workspace = true }
base64 = { workspace = true }
cbc = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
logtest = { workspace = true }
mockall = { workspace = true }
once_cell = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
testing_logger = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

