[package]
name = "tee-worker-pre-compute"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tee-worker-pre-compute"
path = "src/bin/main.rs"

[dependencies]
shared = { workspace = true }

aes = "0.8.4"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["alloc"] }
env_logger = "0.11.8"
log = { workspace = true }
multiaddr = "0.18.2"
reqwest = { workspace = true }
serde = { workspace = true }
sha256 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
serde_json = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
