[package]
name = "tee-worker-pre-compute"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tee-worker-pre-compute"
path = "src/bin/main.rs"

[dependencies]
shared = { workspace = true }

aes = { workspace = true }
base64 = { workspace = true }
cbc = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
multiaddr = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha256 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
serde_json = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
